tests/single_instruction_translation_validation/mcsema/register-variants-samereg/cvtsd2si_r32_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:181:25: error: use of undefined value '@my.fabs.f64'
  %8 = tail call double @my.fabs.f64(double %7) #22
                        ^
0.02user 0.03system 0:00.15elapsed 37%CPU (0avgtext+0avgdata 27312maxresident)k
0inputs+16outputs (0major+3233minor)pagefaults 0swaps
